@@ -8,6 +8,7 @@ WinMerge 2.13.7
   Bugfix: Crash if tabs or EOLs in command line (#2726995)
   Bugfix: Reports had same left/right descriptions (#2772646)
   Bugfix: Diff view highlighted last char diff incorrectly (#2785186)
+  Bugfix: Could select prediffer when plugins were disabled (#2787131)
 
 WinMerge 2.13.6 - 2009-04-16 (r6665)
   Show deleted differences in difference highlight with own
